Add db users, fix circular import, add more loginmanager stuff

--- a/templates/admin/404.html
+++ b/templates/admin/404.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<h2>401: Não autorizado.</h2>
+<h2>404: Página não encontrada.</h2>
 <p>
-    É necessário estar autenticado no sistema para acessar esta página.
+    Desculpe, mas o URL que você tentou acessar não está aqui. =(
 </p>
 
 <p>
