Make logoff btn work

--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -34,7 +34,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"> Ver página </a></li>
                     <li><a href="#"> Configurações </a></li>
-                    <li><a href="#"> Sair </a></li>
+                    <li><a href="{{ url_for('admin.logout') }}"> Sair </a></li>
                 </ul>
             </div>
             
