--- a/templates/public/calendar.html
+++ b/templates/public/calendar.html
@@ -2,6 +2,17 @@
 
 {% block styles %}
 <link rel="stylesheet" type="text/css" href="/static/posgraduacao/css/{{ std.post_graduation.initials.lower() }}.css"/>
+<style>
+    .card {
+        width: 100%;
+        height: 120px;
+        border: 1.5px solid grey;
+        border-radius: 5px;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 5px;
+    }
+</style>
 {% endblock %}
 
 {% block content %}
@@ -12,25 +23,48 @@
 
 <section>
     <header class="page-header">
-        <h2>&raquo Calendário <small>2017.2</small></h2>
+        <h2>&raquo Calendário
+            <small>2017.2</small>
+        </h2>
     </header>
-
-<ul>
-    <li>
-        <strong>17/07/2017 até 21/07/2017: </strong>
-        Matrícula para o período 2017.2.
-    </li>
-
-    <li>
-        <strong>10/08/2017: </strong>
-        Início do período letivo 2017.2.
-    </li>
-
-    <li>
-        <strong>08/12/2017: </strong>
-        Término do período letivo 2017.2. 
-    </li>
-</ul>
+    <div class="row">
+        <div class="col-sm-3">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Matrícula para o período 2017.2</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">Início: 17/07/2017</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">Fim: 21/07/2017</h6>
+                </div>
+            </div>
+        </div>
+    
+        <div class="col-sm-3">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Início do período letivo 2017.2.</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">Início: 10/08/2017</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Hackathon UFRN</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">Início: 27/10/2017</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">Fim: 10/11/2017</h6>
+                </div>
+            </div>
+        </div>
+    
+        <div class="col-sm-3">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Término do período letivo 2017.2</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">Fim: 08/12/2017</h6>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 {% endblock %}
