--- a/templates/public/subjects.html
+++ b/templates/public/subjects.html
@@ -34,6 +34,7 @@
                 <th>Créditos</th>
             </thead>
             {% for subject in grade.subjects %}
+            {% if "deleted" not in subject %}
             {% set subject_index  = loop.index %}
             {% set description_id = 'subject_description-'   ~ grade_index ~ '-' ~ subject_index %}
             {% set icon_id        = 'subject_collapse_icon-' ~ grade_index ~ '-' ~ subject_index %}
@@ -50,6 +51,7 @@
                 <td>{{ subject.workloadInHours|int }}h</td>
                 <td>{{ subject.credits|int }}</td>
             </tr>
+            {% endif %}
             {% endfor %}
         </table>
     </div>
