Alterações sugeridas por Marcell
Alterações feitas para 1 - Compactuar o código com o padrão PEP8, 2 - Retirar uma série de comentários e linhas de código que não deviam estar em português 3 - Alterar o gitignore para não dar upload nos arquivos

--- a/templates/admin/subjects.html
+++ b/templates/admin/subjects.html
@@ -27,8 +27,8 @@
 
     <br/>
 
-    {{ form.workloadInHours.label }}<br/>
-    {{ form.workloadInHours(required='true', type='number', step='1', min='1', max='300', placeholder='ex: 30') }}
+    {{ form.workload_in_hours.label }}<br/>
+    {{ form.workload_in_hours(required='true', type='number', step='1', min='1', max='300', placeholder='ex: 30') }}
 
     <br/>
 
