--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -56,7 +56,7 @@
                 <ul class="nav nav-sidebar">
                     <li><a href="">Disciplinas</a>
                         <ul>
-                        <li><a href="{{ url_for('admin.subjects') }}">Adicionar Disciplinas</a></li>
+                        <li><a href="">Adicionar Disciplinas</a></li>
                         <li><a href="">Retirar Disciplinas</a></li>
                         </ul>
                     </li>
@@ -68,7 +68,7 @@
                     </li>
                     <li><a href="">Docentes</a>
                         <ul>
-                        <li><a href="{{ url_for('admin.add_professors') }}">Adicionar docentes</a></li>
+                        <li><a href="">Adicionar docentes</a></li>
                         <li><a href="">Retirar docentes</a></li>
                         </ul>
                     </li>
@@ -80,25 +80,25 @@
                     </li>
                     <li><a href="">Intercâmbios</a>
                         <ul>
-                        <li><a href="{{ url_for('admin.participations') }}">Adicionar intercâmbios</a></li>
+                        <li><a href="">Adicionar intercâmbios</a></li>
                         <li><a href="">Retirar intercâmbios</a></li>
                         </ul>
                     </li>
                     <li><a href="">Defesas e dissertações</a>
                         <ul>
-                        <li><a href="{{ url_for('admin.scheduled_reports') }}">Adicionar defesas e dissertações</a></li>
+                        <li><a href="">Adicionar defesas e dissertações</a></li>
                         <li><a href="">Retirar defesas e dissertações</a></li>
                         </ul>
                     </li>
                     <li><a href="">Equipe</a>
                         <ul>
-                        <li><a href="{{ url_for('admin.add_staff') }}">Adicionar membros da equipe</a></li>
+                        <li><a href="">Adicionar membros da equipe</a></li>
                         <li><a href="">Retirar membors da equipe</a></li>
                         </ul>
                     </li>
                     <li><a href="">Convênios</a>
                         <ul>
-                            <li><a href="{{ url_for('admin.covenants') }}">Adicionar convênios</a></li>
+                            <li><a href="">Adicionar convênios</a></li>
                             <li><a href="">Retirar convênios</a></li>
                         </ul>
                     </li>
@@ -113,7 +113,7 @@
                 <ul class="nav nav-sidebar">
                 <li><a href="">Documentos</a>
                     <ul>
-                    <li><a href="{{ url_for('admin.documents') }}">Adicionar documentos</a></li>
+                    <li><a href="">Adicionar documentos</a></li>
                     <li><a href="">Retirar documentos</a></li>
                     </ul>
                 </li>
