Começo do sistema de editar os agendamentos

--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -56,56 +56,56 @@
                 <ul class="nav nav-sidebar">
                     <li><a href="">Disciplinas</a>
                         <ul>
-                        <li><a href="">Adicionar Disciplinas</a></li>
-                        <li><a href="">Retirar Disciplinas</a></li>
+                        <li><a href=""class='btn disabled'>Adicionar Disciplinas</a></li>
+                        <li><a href=""class='btn disabled'>Retirar Disciplinas</a></li>
                         </ul>
                     </li>
                     <li><a href="">Discentes</a>
                         <ul>
-                        <li><a href="">Adicionar discentes</a></li>
-                        <li><a href="">Retirar discentes</a></li>
+                        <li><a href=""class='btn disabled'>Adicionar discentes</a></li>
+                        <li><a href=""class='btn disabled'>Retirar discentes</a></li>
                         </ul>
                     </li>
                     <li><a href="">Docentes</a>
                         <ul>
-                        <li><a href="">Adicionar docentes</a></li>
-                        <li><a href="">Retirar docentes</a></li>
+                        <li><a href=""class='btn disabled'>Adicionar docentes</a></li>
+                        <li><a href=""class='btn disabled'>Retirar docentes</a></li>
                         </ul>
                     </li>
                     <li><a href="">Projetos</a>
                         <ul>
-                        <li><a href="">Adicionar projetos</a></li>
-                        <li><a href="">Retirar projetos</a></li>
+                        <li><a href=""class='btn disabled'>Adicionar projetos</a></li>
+                        <li><a href=""class='btn disabled'>Retirar projetos</a></li>
                         </ul>
                     </li>
                     <li><a href="">Intercâmbios</a>
                         <ul>
-                        <li><a href="">Adicionar intercâmbios</a></li>
-                        <li><a href="">Retirar intercâmbios</a></li>
+                        <li><a href=""class='btn disabled'>Adicionar intercâmbios</a></li>
+                        <li><a href=""class='btn disabled'>Retirar intercâmbios</a></li>
                         </ul>
                     </li>
-                    <li><a href="">Defesas e dissertações</a>
+                    <li><a href="" >Agendamento de defesas</a>
                         <ul>
-                        <li><a href="">Adicionar defesas e dissertações</a></li>
-                        <li><a href="">Retirar defesas e dissertações</a></li>
+                        <li><a href="" class='btn disabled'>Adicionar agendamento</a></li>
+                        <li><a href="{{ url_for('admin.edit_scheduled_reports') }} "class='btn disabled'>Editar agendamento</a></li>
                         </ul>
                     </li>
                     <li><a href="">Equipe</a>
                         <ul>
-                        <li><a href="">Adicionar membros da equipe</a></li>
-                        <li><a href="">Retirar membors da equipe</a></li>
+                        <li><a href=""class='btn disabled'>Adicionar membros da equipe</a></li>
+                        <li><a href=""class='btn disabled'>Retirar membors da equipe</a></li>
                         </ul>
                     </li>
                     <li><a href="">Convênios</a>
                         <ul>
-                            <li><a href="">Adicionar convênios</a></li>
-                            <li><a href="">Retirar convênios</a></li>
+                            <li><a href=""class='btn disabled'>Adicionar convênios</a></li>
+                            <li><a href=""class='btn disabled'>Retirar convênios</a></li>
                         </ul>
                     </li>
                     <li><a href="">Calendário</a>
                         <ul>
-                            <li><a href="">Adicionar evento</a></li>
-                            <li><a href="">Retirar evento</a></li>
+                            <li><a href=""class='btn disabled'>Adicionar evento</a></li>
+                            <li><a href=""class='btn disabled'>Retirar evento</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -113,8 +113,8 @@
                 <ul class="nav nav-sidebar">
                 <li><a href="">Documentos</a>
                     <ul>
-                    <li><a href="">Adicionar documentos</a></li>
-                    <li><a href="">Retirar documentos</a></li>
+                    <li><a href=""class='btn disabled'>Adicionar documentos</a></li>
+                    <li><a href=""class='btn disabled'>Retirar documentos</a></li>
                     </ul>
                 </li>
                 </ul>
