--- a/templates/admin/scheduled_reports.html
+++ b/templates/admin/scheduled_reports.html
@@ -12,7 +12,7 @@
     </div>
 {% endif %}
 
-<form method="POST" action="{{ url_for('admin.subjects') }}">
+<form method="POST" action="{{ url_for('admin.scheduled_reports') }}">
     {{ form.csrf_token }}
     
     <br/>
