Mudanças tanto em relação a pep8 como em relação a editar e deletar agendamentos
Mudanças em views/public: Apenas ajeitando algumas coisas em relação a pep8, questão de espaços e de nome de variáveis institutionsWithCovenant mudado para institutions_with_covenant

Mudanças em template/home: Em primeiro lugar, impedindo que agendamentos deletados sejam exibidos e em segundo lugar mudando o nome de variáveis para o padrão pep8(institutions_with_covenant)

Adicionado o template para deletar agendamentos: Um dropdown menu com possibilidade de pesquisa será exibido e quando um campo for selecionado, vai pegar o form que estava escondido e o preencher com os valores do agendamento selecionado no menu, e que será enviado para o método delete_scheduled_report em views/admin.py

Finalizado o template para editar agendamentos: Funcionamento similar ao de deletar com a diferença de que o formulário será mandado para edit_scheduled_reports em views/admin

Mudanças em views/forms/content.py: Adicionado o campo escondido de index no formulário para possibilitar a exclusão e edição de objetos dentro do array

Mudanças em templates/admin/layout: Retirado o bloqueio nos links para adicionar/editar e deletar

Mudanças em static/posgraduacao/css/general_admin.css: Apenas mudanças relativas a aparência dos formulários que aparecem quando o usuário seleciona um agendamento para deletar ou editar

Mudanças em scraping/institutional_repository.py: Ajeitado as linhas que não estavam condizentes com o padrão pep8 como foi apontado por Marcell

Mudanças em views/admin.py: Criação dos métodos edit_scheduled_reports e delete_scheduled_reports, ambos os métodos tem duas funções principais, mandar para os templates um json com todas as defesas agendadas do banco de dados(para possibilitar popular o dropdown menu) e a segunda é fazer as alterações, no método de deletar ele só adiciona um campo "deleted" : "" no objeto e no editar ele rezeta todos os campos com os valores informados no formulário 

--- a/static/posgraduacao/css/general_admin.css
+++ b/static/posgraduacao/css/general_admin.css
@@ -184,8 +184,21 @@ li:hover ul {
     color: #d35400;
 }
 
-.form {
-    margin-left: 7%;
+#form-edit {
+    display: none;
+}
+
+.edit-span {
+    display:block;
+    overflow: hidden;
+}
+
+.edit-input {
+      border: 0;
+      outline: 0;
+      background: transparent;
+      width: 100%;
+      position: absolute;
 }
 
 header {
