--- a/templates/admin/delete_scheduled_reports.html
+++ b/templates/admin/delete_scheduled_reports.html
@@ -9,7 +9,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2-rc.1/js/select2.min.js" type="text/javascript"></script>
 <script type="text/javascript">
 $(document).ready(function() {
-    $("input[name=create]").val("Editar");
+    $("input[name=create]").val("Deletar");
     var scheduledReports = {{ final_reports|tojson|safe }};
     var scheduledReports = JSON.parse(scheduledReports);
     var listOfTitles = [];
@@ -39,6 +39,7 @@ $(document).ready(function() {
         $("input[name=author]").val(author);
         $("input[name=time]").val(date);
         $("input[name=index]").val(indexInReports);
+        console.log($("input[name=index]").val());
         
     });
 });
@@ -46,11 +47,6 @@ $(document).ready(function() {
 {% endblock %}
 
 {% block content %}
-{% if success_msg %}
-    <div class="form-sucess">
-        <p>{{ success_msg }}</p>
-    </div>
-{% endif %}
 <section>
     <header class="page-header">
         <h2>&raquo Trabalhos de Conclusão</h2>
@@ -59,21 +55,21 @@ $(document).ready(function() {
     <select id="list"></select>
     <button id="edit" type="button">Selecionar</button>
     <div>
-    <form method="POST" id="form-edit" action="{{ url_for('admin.edit_scheduled_reports') }}">
+    <form method="POST" id="form-edit" action="{{ url_for('admin.delete_scheduled_reports') }}">
         {{ form.csrf_token }}
         {{ form.index(required='true', style="display:none;", readonly="readonly") }}
         <br/>
         {{ form.title.label(class="label-edit") }}
-        {{ form.title(required='true', class="edit-input") }}
+        {{ form.title(required='true', class="edit-input", readonly="readonly") }}
         <br/>
         {{ form.author.label(class="label-edit") }}
-        {{ form.author(required='true', class="edit-input") }}
+        {{ form.author(required='true', class="edit-input", readonly="readonly") }}
         <br/>
         {{ form.location.label(class="label-edit") }}
-        {{ form.location(required='true', class="edit-input") }}
+        {{ form.location(required='true', class="edit-input", readonly="readonly") }}
         <br/>
         {{ form.time.label(class="label-edit") }}
-        {{ form.time(required='true', class="edit-input") }}
+        {{ form.time(required='true', class="edit-input", readonly="readonly") }}
         <br/>
 
         {{ form.create }}
