Adicionados novos testes e criados os sistemas de edit/delete para intercambios e disciplinas
Problemas com o teste: Não estou conseguindo atualmente definir qual banco de dados os unit testes vão usar. Sistema de edit e delete dos intercambios e disciplinas é essencialmente igual ao de agendamentos, com a diferença que na disciplina existem dois documentos que precisam ser puxados do bd, o usuário alterna entre as listas de obrigatórias e eletivas por meio de um menu select

--- a/static/posgraduacao/css/general_admin.css
+++ b/static/posgraduacao/css/general_admin.css
@@ -117,9 +117,10 @@ section header h2{
     border: 1px solid #ccc;
     top: 0;
     left: 180px;
-    margin-left: 10px;
+    margin-left: 30px;
     list-style: none;
     display: none;
+    z-index: 30;
 }
 
 ul li {
@@ -129,8 +130,7 @@ ul li {
 li a {
     display: block;
     color: #34495e;
-    padding-right:20px;
-    padding-left:20px;
+    padding: 5px;
     white-space: nowrap;
 }
 
@@ -180,6 +180,12 @@ li:hover ul {
     font-weight: bold;
 }
 
+#form-div {
+    position: absolute;
+    width: 100%;
+    margin-left: 70px;
+}
+
 .error-text{
     color: #d35400;
 }
@@ -188,17 +194,16 @@ li:hover ul {
     display: none;
 }
 
-.edit-span {
-    display:block;
-    overflow: hidden;
-}
-
-.edit-input {
+.delete-input {
       border: 0;
       outline: 0;
       background: transparent;
       width: 100%;
-      position: absolute;
+}
+
+textarea.edit-input,
+textarea.delete-input {
+    width: 50%;
 }
 
 header {
