--- a/templates/admin/delete_scheduled_reports.html
+++ b/templates/admin/delete_scheduled_reports.html
@@ -60,16 +60,16 @@ $(document).ready(function() {
         {{ form.index(required='true', style="display:none;", readonly="readonly") }}
         <br/>
         {{ form.title.label(class="label-edit") }}
-        {{ form.title(required='true', class="edit-input", readonly="readonly") }}
+        {{ form.title(required='true', class="delete-input", readonly="readonly") }}
         <br/>
         {{ form.author.label(class="label-edit") }}
-        {{ form.author(required='true', class="edit-input", readonly="readonly") }}
+        {{ form.author(required='true', class="delete-input", readonly="readonly") }}
         <br/>
         {{ form.location.label(class="label-edit") }}
-        {{ form.location(required='true', class="edit-input", readonly="readonly") }}
+        {{ form.location(required='true', class="delete-input", readonly="readonly") }}
         <br/>
         {{ form.time.label(class="label-edit") }}
-        {{ form.time(required='true', class="edit-input", readonly="readonly") }}
+        {{ form.time(required='true', class="delete-input", readonly="readonly") }}
         <br/>
 
         {{ form.create }}
